<resources>
    <string name="app_name">AndroidProjectMA23</string>
    <string name="profile_creation_title_text">Lägg till profilbild &amp; namn</string>
    <string name="profile_creation_subtitle">Namn är obligatoriskt</string>
    <string name="display_name_input_hint">Visningsnamn</string>
    <string name="profile_creation_display_text_forOtherUsers">Visas för andra användare</string>
    <string name="button_text_profile_creation_nextStep">Gå Vidare</string>
    <string name="profile_creation_select_interest_text">Vad har du för intressen?</string>
    <string name="profile_change_interest_text">Välj nya intressen</string>
    <string name="profile_creation_image_dialog_gallery_icon">Välj bild från galleriet</string>
    <string name="profile_creation_image_dialog_camera_icon">Använd kameran för att ta bild</string>
    <string name="profile_creation_image_dialog_choose_option_text">Välj åtgärd</string>
    <string name="button_profile_creation_done">Klar</string>
    <string name="profile_creation_step2_go_back_textView"><u>Tillbaka</u></string>
    <string name="music_interest_textView">Musik</string>
    <string name="sports_interest_textView">Sport</string>
    <string name="movies_interest_textView">Filmer</string>
    <string name="arts_interest_textViews">Konst</string>
    <string name="books_interest_textView">Böcker</string>
    <string name="wine_interest_textView">Vin</string>
    <string name="cooking_interest_textView">Matlagning</string>
    <string name="travel_interest_textView">Resa</string>
    <string name="festival_interest_textView">Festival</string>
    <string name="fashion_interest_textView">Mode</string>
    <string name="dance_interest_textView">Dans</string>
    <string name="games_interest_textView">Spel</string>
    <string name="yoga_interest_textView">Yoga</string>
    <string name="camping_interest_textView">Campa</string>
    <string name="fika_interest_textView">Fika</string>
    <string name="training_interest_textView">Träning</string>
    <string name="animal_interest_textView">Djur</string>
    <string name="garden_interest_textView">Trädgård</string>
    <string name="photograph_interest_textView">Fotografering</string>
    <string name="technology_interest_textView">Teknik</string>
    <string name="pick_atleast_one_interest_textView">Välj minst 1 alternativ</string>
    <string name="user_data_no_information_available">Ingen information tillgänglig</string>
    <string name="default_web_client_id">34100932509-6mpmhkped3p205pumov8n1g48b7nb3on.apps.googleusercontent.com</string>
    <string name="display_name">Display name</string>
    <string name="popup_filter_save_button">Spara</string>
    <string name="write_a_message">Skriv meddelande</string>
    <string name="send_button_text">Skicka</string>
    <string name="send_message_button_contentDescription">Send message button</string>
    <string name="age_placeholder_back">Ålder: %1$s</string>
    <string name="music">Musik</string>
    <string name="sports">Sport</string>
    <string name="movies">Film</string>
    <string name="art">Konst</string>
    <string name="books">Böcker</string>
    <string name="wine">Vin</string>
    <string name="cooking">Matlagning</string>
    <string name="travel">Resa</string>
    <string name="festival">Festival</string>
    <string name="fashion">Mode</string>
    <string name="dance">Dans</string>
    <string name="games">Spel</string>
    <string name="yoga">Yoga</string>
    <string name="camping">Camping</string>
    <string name="fika">Fika</string>
    <string name="training">Träning</string>
    <string name="animals">Djur</string>
    <string name="garden">Trädgård</string>
    <string name="photography">Fotografering</string>
    <string name="technology">Teknologi</string>
    <string name="matches_details_description_default_text">Användaren har inte fyllt i ytterligare info om sig själv ännu. Fråga istället?</string>
    <string name="matches_details_interest_header">Mina intressen</string>
    <string name="matches_details_about_header">Om mig</string>
    <string name="matches_interest_myInterest_textVIew">Här kan användaren utveckla lite kring vad den gillar att göra eller liknande.</string>
    <string name="matches_details_send_message_text">Skicka meddelande</string>
    <string name="unknown_interest">Okänt intresse</string>
    <string name="profile_creation_step2_max_interest_message">Du kan välja max 5 intressen.</string>
    <string name="profile_creation_step2_minimum_interest_message">Välj minst ett intresse för att fortsätta.</string>
    <string name="filter_match_text">Välj antal matchande intresse</string>
    <string name="changeProfileFragment_showImagePickerOptions_take_a_picture">Ta en bild</string>
    <string name="changeProfileFragment_showImagePickerOptions_choose_from_gallery">Välj från galleri</string>
    <string name="changeProfileFragment_showImagePickerOptions_cancel">Avbryt</string>
    <string name="changeProfileFragment_showImagePickerOptions_change_picture">Ändra bild</string>
    <string name="requestCameraPermission_title">Kräver kameratillstånd</string>
    <string name="requestCameraPermission_message">Denna app behöver tillgång till din kamera för att kunna ta bilder.</string>
    <string name="requestCameraPermission_positiveButton">Ok</string>
    <string name="requestLocationPermission_title">Platsbehörighet krävs</string>
    <string name="requestLocationPermission_message">För att ge dig den bästa möjliga upplevelsen och hjälpa dig att hitta nya vänner i närheten, behöver appen tillgång till din plats.</string>
    <string name="requestLocationPermission_positiveButton">OK</string>
    <string name="requestLocationPermission_negativeButton">Avbryt</string>
    <string name="landingPageActivity_showFilterPopup_no_userId_available">Användar-ID inte tillgängligt.</string>
    <string name="landingPageActivity_showFilterPopup_no_location_available">Kunde inte hämta nuvarande plats.</string>
    <string name="loginToAppActivity_logIn_empty_userName">Snälla skriv både användarnamn och lösenord.</string>
    <string name="loginToAppActivity_handleSignInResult_failed_to_logIn">Inloggningen misslyckades, försök igen.</string>
    <string name="loginToAppActivity_firebaseAuthWithGoogle_authentication_failed">Autentisering misslyckades.</string>
    <string name="loginToAppActivity_saveNewUserInfo_success">Grundläggande användarinformation har sparats.</string>
    <string name="loginToAppActivity_saveNewUserInfo_failure">Det gick inte att spara grundläggande användarinformation.</string>
    <string name="loginToAppActivity_handleLoginFailure_wrong_mail_password">Fel email eller lösenord.</string>
    <string name="loginToAppActivity_handleLoginFailure_email_notRegistered">Email är inte registrerad.</string>
    <string name="loginToAppActivity_handleLoginFailure_failed_to_logIn">Inloggning misslyckad, försök igen senare.</string>
    <string name="MyMatchesDetailFragment_startConvesationWithUser_unkown_user">Okänd Användare</string>
    <string name="myProfilePageFragment_loadUserProfile_no_about_info">Ingen information tillgänglig.</string>
    <string name="myProfilePageFragment_loadUserProfile_no_interest_info">Ingen information tillgänglig.</string>
    <string name="myProfilePageFragment_loadUserProfile_failed_loading_user">Ladda användarens profil misslyckades.</string>
    <string name="profileCreationStep1Fragment_onActivityResult">Problem att spara bilden.</string>
    <string name="profileCreationStep1Fragment_handleNextStep">Du måste ange ett visningsnamn för att fortsätta.</string>
    <string name="profileCreationStep1Fragment_saveDisplayNameAndContinue">Kunde inte spara visningsnamnet.</string>
    <string name="profileCreationStep1Fragment_uploadImageIfSelected_failed">Uppladdning misslyckades.</string>
    <string name="profileCreationStep1Fragment_uploadImageIfSelected_removal_failed">Kunde inte ta bort befintlig bild.</string>
    <string name="signUpNewAccountActivity_signUp_username_required">Användarnamn krävs.</string>
    <string name="signUpNewAccountActivity_signUp_password_required">Lösenord krävs.</string>
    <string name="signUpNewAccountActivity_signUp_registration_failed">Registrering misslyckades.</string>
    <string name="signUpNewAccountActivity_signUp_registration_failed_weak_password">Lösenordet är för svagt.</string>
    <string name="signUpNewAccountActivity_signUp_registration_failed_email_taken">Ett konto med denna email finns redan.</string>
    <string name="signUpNewAccountActivity_signUp_registration_failed_unkown_error">Ett oväntat fel inträffade.</string>
    <string name="signUpNewAccountActivity_saveUserData_about">Ingen information tillgänglig.</string>
    <string name="signUpNewAccountActivity_saveUserData_myInterests">Ingen information tillgänglig.</string>
    <string name="changeInterestFragment_handleProfileCompletion_interest_amount">Välj minst ett intresse för att fortsätta.</string>
    <string name="changeProfileFragment_saveProfileImageUrlToFirestore_uploadFailed">Uppdateringen av profilbild misslyckades.</string>
    <string name="findFriendsFragment_onSelectionChanged_userID_not_available">Användar-ID är inte tillgängligt.</string>
    <string name="findFriendsFragment_onSelectionChanged_no_user_found">Användar-ID är inte tillgängligt.</string>
    <string name="findFriendsFragment_onSelectionChanged_no_current_location">Kunde inte få aktuell plats.</string>
    <string name="findFriendsFragment_onSelectionChanged_no_location_permission">Platsbehörighet krävs.</string>
    <string name="findFriendsFragment_onViewCreated_coroutine_could_not_get_current_location">Kunde inte få aktuell plats.</string>
    <string name="findFriendsFragment_onViewCreated_coroutine_userId_not_available">Användar-ID är inte tillgängligt.</string>
</resources>