<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@color/surface">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_creation_image_dialog_choose_option_text"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/onSurface"
        android:fontFamily="@font/roboto_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/galleryImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/baseline_image_24"
        android:contentDescription="@string/profile_creation_image_dialog_gallery_icon"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/cameraImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/profile_creation_image_dialog_camera_icon"
        android:padding="16dp"
        android:src="@drawable/baseline_camera_alt_24"
        app:layout_constraintTop_toBottomOf="@id/galleryImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
