<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="16dp"
                app:cardCornerRadius="65dp">
                <ImageView
                    android:id="@+id/profileImageViewBack"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_image_placeholder" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/matches_details_displayName_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/display_name"
                    android:textSize="26sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/matches_detaíls_age_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/age_placeholder_back"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/matches_details_about_header_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/matches_details_about_header"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/matches_details_about_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/matches_details_description_default_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/matches_details_interest_header_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/matches_details_interest_header"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/matches_details_interest_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/matches_interest_myInterest_textVIew"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/matches_details_interest_imageView1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_empty" />

                <ImageView
                    android:id="@+id/matches_details_interest_imageView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_empty" />

                <ImageView
                    android:id="@+id/matches_details_interest_imageView3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_empty" />


                <ImageView
                    android:id="@+id/matches_details_interest_imageView4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_empty" />

                <ImageView
                    android:id="@+id/matches_details_interest_imageView5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_empty" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:text="@string/matches_details_send_message_text"
        app:icon="@drawable/baseline_send_24" />
</RelativeLayout>